# pocket

./: .gitignore  README.md  makefile  platform.yaml  pyproject.toml  terraform_credentials
ansible/: ansible.cfg  gitlab-bootstrap.yaml  inventory.ini  k8s-cluster.yml  nfs-provisioner.yaml  nfs.yaml  playbook.yml
docs/: pocket-cli.md
platform/schema/v1/: platform-config.schema.json
platform/schema/v1/examples/: aws-vanilla.yaml
providers/aws/eks/terraform/: external-secrets.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vault.tf
providers/aws/eks/terraform/manifests/: eso-cluster-secret-store.yaml
providers/aws/vanilla/: README.md
providers/aws/vanilla/ansible/: gitlab.yaml  inventory.ini  playbook.yml
providers/aws/vanilla/terraform/: cloud-init.cfg  main.tf  terraform.tfvars  variables.tf
scripts/: bootstrap_gitlab.sh  pocket-venv-launcher.sh
src/: pyproject.toml
src/pocket/: __main__.py  cli.py  config.py
src/pocket/backends/: eks.py  hcl.py  vanilla.py
src/pocket/backends/aws/: eks.py  gitlab.py  vanilla.py  vault.py
src/tests/: conftest.py  test_backends.py  test_config.py
terraform/: outputs.tf  variables.tf
